--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "@skynexui/components": "^1.23.7",
     "@supabase/supabase-js": "^1.29.4",
-    "next": "latest",
+    "next": "^12.0.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
